--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4D Crochet Document</title>
+    <title>Embrochet Document</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
@@ -114,23 +114,23 @@
             <div style="display: flex; align-items: center; height: 100%;">
                 <div style="padding: 0 8rem 0 10rem;">
                     <div style="margin-bottom: 4rem;">
-                        <h1 style="text-align: center; margin-bottom: 2rem;">4D Crochet</h1>
+                        <h1 style="text-align: center; margin-bottom: 2rem;">Embrochet</h1>
                         <p style="text-align: center">Easy access to complex shape crafting with thermally responsive crocheting using a singular stitch.</p>
                     </div>
                     <div style="display: flex; flex-direction: column; align-items: center">
                         <div style="display: flex; margin-bottom: 1rem;">
+                            <a href="tools.html">
+                                <h3>Getting Ready to Begin</h3>
+                            </a>
+                        </div>
+                        <div style="display: flex; margin-bottom: 1rem;">
                             <a href="workflow.html">
-                                <h3>Mechanism and Workflow</h3>
+                                <h3>Crafting Your Fabric</h3>
                             </a>
                         </div>
                         <div style="display: flex; margin-bottom: 1rem;">
-                            <a href="library.html">
-                                <h3>Shape-Changing Library</h3>
-                            </a>
-                        </div>
-                        <div style="display: flex; margin-bottom: 1rem;">
-                            <a href="userstudy.html">
-                                <h3>User Study</h3>
+                            <a href="sample.html">
+                                <h3>User's Applications</h3>
                             </a>
                         </div>
                     </div>
